Stop response images crunching on mobile.

--- a/src/app/components/Question.scss
+++ b/src/app/components/Question.scss
@@ -1,66 +1,70 @@
-@import "../../variables";
+@import '../../variables';
 
 .Question {
-	position: relative;
-	border-radius: 5px;
-	padding: 20px 20px 15px;
-	width: 100%;
-	box-sizing: border-box;
-	box-shadow: $boxShadow;
-	background-color: $white;
-	font-family: $fontSans;
-	font-size: 14px;
-	text-align: center;
-	line-height: 1.4;
-	animation: fadeIn .25s both;
-	will-change: opacity;
+  position: relative;
+  border-radius: 5px;
+  padding: 20px 20px 15px;
+  width: 100%;
+  box-sizing: border-box;
+  box-shadow: $boxShadow;
+  background-color: $white;
+  font-family: $fontSans;
+  font-size: 14px;
+  text-align: center;
+  line-height: 1.4;
+  animation: fadeIn 0.25s both;
+  will-change: opacity;
 
-	@media #{$mq-sm} {
-		font-size: 	14px;
-	}
+  @media #{$mq-sm} {
+    font-size: 14px;
+  }
 }
 
 .Question--mock {
-	color: $grey !important;
-	letter-spacing: -0.05em
+  color: $grey !important;
+  letter-spacing: -0.05em;
 }
 
 .Question .h1,
 .Question .h2 {
-	margin: 0;
-	font-weight: bold;
-	line-height: 1.2222;
+  margin: 0;
+  font-weight: bold;
+  line-height: 1.2222;
 
-	@media #{$mq-md} {
-		line-height: 1.5;
-	}
+  @media #{$mq-md} {
+    line-height: 1.5;
+  }
 
-	@media #{$mq-lg} {
-		line-height: 2;
-	}
+  @media #{$mq-lg} {
+    line-height: 2;
+  }
 }
 
 .Question .h1 {
-	margin-bottom: 10px;
-	font-size: 1.285714286em;
+  margin-bottom: 10px;
+  font-size: 1.285714286em;
 }
 
 .Question .h2 {
-	margin: 25px 0 0 0;
-	font-size: 1.142857143em;
+  margin: 25px 0 0 0;
+  font-size: 1.142857143em;
 }
 
 .is-part-of-response {
   display: none;
+
+  &img {
+    height: auto;
+  }
 }
 
 .Question .is-part-of-response {
   display: block;
 }
 
-@import "./QuestionLabel";
-@import "./QuestionPersonalChoices";
-@import "./QuestionPublicResult";
-@import "./QuestionPublicChoices";
-@import "./QuestionPublicResponses";
-@import "./QuestionExpert";
+@import './QuestionLabel';
+@import './QuestionPersonalChoices';
+@import './QuestionPublicResult';
+@import './QuestionPublicChoices';
+@import './QuestionPublicResponses';
+@import './QuestionExpert';
